[package]
name = "hyper1_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "http1"] }
pin-project-lite = "0.2.13"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
